--- a/_posts/2020-07-29-vimrc-bak.md
+++ b/_posts/2020-07-29-vimrc-bak.md
@@ -1,13 +1,13 @@
 ---
+layout: post
 title: vimrc 备份
+subtitle: 
 author: Liang Chen
+lang: en
 date: 2020-07-29 18:00:00 +0800
-categories: [Notes]
-tags: [Vim]
-pin: false
-toc: true
-comments: false
-math: true
+tags: [Notes, Vim]
+catalog: true
+mathjax: true
 ---
 
 <head>
