--- a/_posts/2020-12-30-2021-Work-Plan.md
+++ b/_posts/2020-12-30-2021-Work-Plan.md
@@ -1,13 +1,13 @@
 ---
+layout: post
 title: 2021工作计划
+subtitle:
 author: Liang Chen
+lang: en
 date: 2020-12-30 18:00:00 +0800
-categories: [Plan]
-tags: [2021]
-pin: true
-toc: true
-comments: false
-math: true
+tags: [Plan, 2021]
+catalog: true
+mathjax: true
 ---
 
 <head>
