Add Tcl-VLSI blog

--- a/_posts/2020-07-29-vimrc-bak.md
+++ b/_posts/2020-07-29-vimrc-bak.md
@@ -309,4 +309,12 @@ nnoremap L $
 "cnoremap <C-k> <t_ku>
 "cnoremap <C-a> <Home>
 "cnoremap <C-e> <End>
+
+set fdm=indent
+
+inoremap ' ''<ESC>i
+inoremap " ""<ESC>i
+inoremap ( ()<ESC>i
+inoremap [ []<ESC>i
+inoremap { {}<ESC>i
 ```
