Change tags of qingchun

--- a/_posts/2021-04-28-qingchun.md
+++ b/_posts/2021-04-28-qingchun.md
@@ -4,7 +4,7 @@ title: 青春
 subtitle: 李大钊
 author: Liang Chen
 date: 2021-04-28 18:00:00 +0800
-tags: [Notes Read]
+tags: [Notes, Read]
 catalog: true
 ---
 
