Add password in dc sdc

--- a/_posts/2021-08-27-dc-sdc.md
+++ b/_posts/2021-08-27-dc-sdc.md
@@ -7,6 +7,20 @@ tags: [Synthesis, SDC]
 catalog: true
 ---
 
+<head>
+  <script language="JavaScript">
+    while(true) {
+      var password = "";
+      password = prompt('Please input password:', '');
+      if (password != 'easonchan') {
+        alert ("password wrong!!");
+      } else {
+        break;
+      }
+    }
+  </script>
+</head>
+
 ```shell
 # make both clock in same group
 #create_clock -name nn_clk -period $nn_clk_period [get_ports pad_nn_clk]
