Add password for shixi ppt

--- a/_posts/2021-08-27-shixi-ppt.md
+++ b/_posts/2021-08-27-shixi-ppt.md
@@ -7,6 +7,20 @@ tags: [Shixi, Offer]
 catalog: true
 ---
 
+<head>
+  <script language="JavaScript">
+    while(true) {
+      var password = "";
+      password = prompt('Please input password:', '');
+      if (password != 'easonchan') {
+        alert ("password wrong!!");
+      } else {
+        break;
+      }
+    }
+  </script>
+</head>
+
 ![]({{site.url}}/img/in-post/notes/top0.jpg)
 
 ![]({{site.url}}/img/in-post/notes/project1.jpg)
