Add CV in shixi ppt

--- a/_posts/2021-08-27-shixi-ppt.md
+++ b/_posts/2021-08-27-shixi-ppt.md
@@ -34,3 +34,5 @@ catalog: true
 ![]({{site.url}}/img/in-post/notes/maxpooling4.jpg)
 
 ![]({{site.url}}/img/in-post/notes/backend5.png)
+
+![]({{site.url}}/img/in-post/notes/CV.jpg)
