--- a/_posts/2021-11-03-Chome-Set.md
+++ b/_posts/2021-11-03-Chome-Set.md
@@ -26,12 +26,12 @@ catalog: true
     
     [https://raw.githubusercontent.com/gfwlist/gfwlist/master/gfwlist.txt](https://raw.githubusercontent.com/gfwlist/gfwlist/master/gfwlist.txt)
 
-  kexueshangwang
+## kexueshangwang
 
-  - tool: [v2rayN-Core](https://github.com/2dust/v2rayN/releases)
+- tool: [v2rayN-Core](https://github.com/2dust/v2rayN/releases)
 
-  - tool: [v2rayN-Core_self](https://github.com/liangchen01xz/v2rayN-Core_self)
+- tool: [v2rayN-Core_self](https://github.com/liangchen01xz/v2rayN-Core_self)
 
-  - link: [https://view.ssfree.ru/](https://view.ssfree.ru/)
-  
-  - link: [https://www.youtube.com/channel/UCzRaJgQ6LhtZWyxHBMCZU6Q](https://www.youtube.com/channel/UCzRaJgQ6LhtZWyxHBMCZU6Q)
+- link: [https://view.ssfree.ru/](https://view.ssfree.ru/)
+
+- link: [https://www.youtube.com/channel/UCzRaJgQ6LhtZWyxHBMCZU6Q](https://www.youtube.com/channel/UCzRaJgQ6LhtZWyxHBMCZU6Q)
