Update my shixi ppt & CV

--- a/_posts/2021-08-27-shixi-ppt.md
+++ b/_posts/2021-08-27-shixi-ppt.md
@@ -23,6 +23,8 @@ catalog: true
 
 ![]({{site.url}}/img/in-post/notes/top0.jpg)
 
+![]({{site.url}}/img/in-post/notes/clk7.jpg)
+
 ![]({{site.url}}/img/in-post/notes/project1.jpg)
 
 ![]({{site.url}}/img/in-post/notes/areaopt2.jpg)
@@ -33,6 +35,8 @@ catalog: true
 
 ![]({{site.url}}/img/in-post/notes/maxpooling4.jpg)
 
+![]({{site.url}}/img/in-post/notes/group_link8.jpg)
+
 ![]({{site.url}}/img/in-post/notes/backend5.png)
 
-![]({{site.url}}/img/in-post/notes/CV.jpg)
+![]({{site.url}}/img/in-post/notes/CV.png)
